// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BlogPreview matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-1wtdxhm"
    data-testid="blog-preview"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-15xfbvd-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-6vqp9g"
          >
            From the Desk
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-62jhto-MuiTypography-root"
          >
            Musings on cybersecurity, hacking tools, and the books that shaped my thinking. Here are a few pieces.
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1u32zg0"
      >
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/06/fsociety-hacking-tools-from-mr-robot.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Tools
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                FSOCIETY hacking tools from Mr. Robot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                June 28, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/06/see-previously-connected-wifi-passwords.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Networking
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                See previously connected wifi passwords using cmd
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                June 09, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/05/keylogger-with-python.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Python
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                Keylogger with Python — capture every keystroke
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                May 15, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hhhrrrttt222111.blogspot.com/2018/06/rebecca-romance-mystery-horror-evilness.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Literature
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                Rebecca
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                June 24, 2018
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-1nijoa4"
        >
          <a
            data-discover="true"
            href="/blog"
          >
            <span>
              View all articles
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BlogPreview matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-s4fpfs"
    data-testid="blog-preview"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-15xfbvd-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-1vjc282"
          >
            From the Desk
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-glirf2-MuiTypography-root"
          >
            Musings on cybersecurity, hacking tools, and the books that shaped my thinking. Here are a few pieces.
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1u32zg0"
      >
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-59hsit"
            href="https://hackzism.blogspot.com/2020/06/fsociety-hacking-tools-from-mr-robot.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-ekbvqu-MuiTypography-root"
              >
                Tools
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-3r2rrl-MuiTypography-root"
              >
                FSOCIETY hacking tools from Mr. Robot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7u6sbj-MuiTypography-root"
              >
                June 28, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-11bnwcz-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-59hsit"
            href="https://hackzism.blogspot.com/2020/06/see-previously-connected-wifi-passwords.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-ekbvqu-MuiTypography-root"
              >
                Networking
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-3r2rrl-MuiTypography-root"
              >
                See previously connected wifi passwords using cmd
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7u6sbj-MuiTypography-root"
              >
                June 09, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-11bnwcz-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-59hsit"
            href="https://hackzism.blogspot.com/2020/05/keylogger-with-python.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-ekbvqu-MuiTypography-root"
              >
                Python
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-3r2rrl-MuiTypography-root"
              >
                Keylogger with Python — capture every keystroke
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7u6sbj-MuiTypography-root"
              >
                May 15, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-11bnwcz-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-59hsit"
            href="https://hhhrrrttt222111.blogspot.com/2018/06/rebecca-romance-mystery-horror-evilness.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-ekbvqu-MuiTypography-root"
              >
                Literature
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-3r2rrl-MuiTypography-root"
              >
                Rebecca
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7u6sbj-MuiTypography-root"
              >
                June 24, 2018
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-11bnwcz-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-bpdn5t"
        >
          <a
            data-discover="true"
            href="/blog"
          >
            <span>
              View all articles
            </span>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
